<resources>
    <string name="app_name">TripDiary</string>
    <string name="title_activity_main">TripDiary</string>
    <string name="title_activity_view">Trips</string>
    <string name="title_activity_add_point">Add Point</string>
    <string name="title_activity_view_point">ViewPointActivity</string>
    <string name="imagebutton_description">imagebutton</string>
    <string name="History">History</string>
    <string name="Name">Name</string>
    <string name="Title">Title</string>
    <string name="Location">Location</string>
    <string name="Altitude">Altitude</string>
    <string name="Time">Time</string>
    <string name="Start_Trip">Start Trip</string>
    <string name="title_activity_play_point">PlayPointActivity</string>
    <string name="title_activity_preference">Preference</string>
    <string name="Category_Name">Category Name</string>
    <string name="Red">Red</string>
    <string name="Yellow">Yellow</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="Color">Color</string>
    <string name="Note">Note</string>
    <string name="Category">Category</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string-array name="speed">
        <item>Very Slow</item>
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Very Fast</item>
    </string-array>
    <string-array name="speed_play_trip_values">
        <item>50</item>
        <item>20</item>
        <item>10</item>
        <item>5</item>
        <item>2</item>
    </string-array>
    <string-array name="speed_play_poi_values">
        <item>5000</item>
        <item>2000</item>
        <item>1000</item>
        <item>500</item>
        <item>200</item>
    </string-array>
    <string-array name="sorttype">
        <item>By Time</item>
        <item>By Category</item>
    </string-array>
    <string-array name="sorttype_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="play_view_type">
        <item>Normal</item>
        <item>SkyView</item>
    </string-array>
    <string-array name="play_view_type_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="cost_types">
        <item>Food</item>
        <item>Lodging</item>
        <item>Transportation</item>
        <item>Other</item>
    </string-array>
    <string-array name="record_durations">
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    <string-array name="analysis_methods">
        <item >New method by JNI(fast,unstable)</item>
        <item >Old method by Java(slow,stable)</item>
    </string-array>
    <string-array name="analysis_methods_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_view_map">ViewMap</string>
    <string name="input_the_poi_title">Input the POI title</string>
    <string name="record_audio">Record Audio</string>
    <string name="finish">Finish</string>
    <string name="input_diary">Write Diary</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_category">Edit Category</string>
    <string name="cannot_edit_to_nocategory">Cannot edit to nocategory</string>
    <string name="cannot_edit_nocategory">Cannot edit nocategory</string>
    <string name="cannot_add_nocategory">Cannot add nocategory</string>
    <string name="cannot_delete_nocategory">Cannot delete nocategory</string>
    <string name="add_category">Add Category</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="gps_is_disabled">GPS is disabled</string>
    <string name="explain_gpx">You can start trip without GPS. But you should import the .gpx file that contains time information after the trip.</string>
    <string name="start_with_gps">Start with GPS</string>
    <string name="start_without_gps">Start without GPS</string>
    <string name="input_the_trip_name">Input the Trip Name</string>
    <string name="same_trip">Same Trip</string>
    <string name="explain_same_trip">There is a same trip in history.Do you want to continue that trip?</string>
    <string name="explain_conflict_trip">There is a same trip.Please use another name.</string>
    <string name="add_poi">Add POI</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="prepare_diary">Prepare diary</string>
    <string name="prepare_pictures">Prepare pictures</string>
    <string name="prepare_video">Prepare videos</string>
    <string name="prepare_audio">Prepare audios</string>
    <string name="prepare_data">Prepare data</string>
    <string name="explain_same_trip_when_import">There is a same trip in history.Please use another name</string>
    <string name="select_the_gpx">Select the .gpx</string>
    <string name="search_trip">Search Trip</string>
    <string name="trip_not_found">Trip not found</string>
    <string name="choose_the_trip">Choose the trip</string>
    <string name="sort_by">Sort by</string>
    <string name="be_careful">Be careful</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="cannot_find_gpx_data">Can not find gpx data</string>
    <string name="ask_import_gpx_file">Do you want to import .gpx file?(must contain time information)</string>
    <string name="there_is_no_data_to_display">There is no data to display</string>
    <string name="search_poi">Search POI</string>
    <string name="poi_not_found">POI not found</string>
    <string name="choose_the_poi">Choose the POI</string>
    <string name="initial_map">Initial Map</string>
    <string name="analysis_gpx">Analyzing .gpx</string>
    <string name="setup_pois">Setup POIs</string>
    <string name="gpx_doesnt_contain_time_information">The .gpx file doesn\'t contain time information</string>
    <string name="invalid_gpx_file">Invalid gpx file</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="total_time">Total Time</string>
    <string name="distance">Distance</string>
    <string name="average_speed">Average Speed</string>
    <string name="poi">POI</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="not_a_picture">Not a picture</string>
    <string name="not_a_video">Not a video</string>
    <string name="not_a_audio">Not a audio</string>
    <string name="not_a_music">Not a music</string>
    <string name="filename">Filename</string>
    <string name="help">Help</string>
    <string name="share_diary">Share Diary</string>
    <string name="statistics">Statistics</string>
    <string name="import_trip_with_gpx">Import trip with .gpx</string>
    <string name="import_a_picture">Import a picture</string>
    <string name="import_a_video">Import a video</string>
    <string name="import_a_audio">Import a audio</string>
    <string name="play_music">Play Music</string>
    <string name="play_background_music">Play background music when playing trip</string>
    <string name="dont_play_background_music">Don\'t play background music when playing trip</string>
    <string name="music_path">Music Path</string>
    <string name="select_music_path">Select music path for playing</string>
    <string name="playing_trip_speed">Playing Trip Speed</string>
    <string name="select_speed">Select Speed</string>
    <string name="play_trip_speed_summary">The dot moving speed when playing trip</string>
    <string name="playing_poi_speed">Playing POI Speed</string>
    <string name="play_poi_speed_summary">The speed when playing POI</string>
    <string name="track_color">Track Color</string>
    <string name="display_setting">Display Setting</string>
    <string name="trip_category">Trip Category</string>
    <string name="select_sort_type">Select Sort Type</string>
    <string name="trips_sort_type">Trips Sort Type</string>
    <string name="trips_sort_type_summary">Trips will be sorted by this type</string>
    <string name="manage_category">Manage Category</string>
    <string name="manage_category_summary">Manage trip category</string>
    <string name="others">Others</string>
    <string name="diary_font">Diary Font</string>
    <string name="not_a_ttf_file">Not a .ttf file</string>
    <string name="invalid_font">Invalid font</string>
    <string name="diary_font_size">Diary Font Size</string>
    <string name="select_diary_font_size">Select diary font size</string>
    <string name="please_enable_the_gps_provider">Please enable the gps provider</string>
    <string name="share">Share</string>
    <string name="select_diary_font">Select dairy font</string>
    <string name="select_poi">Select POI</string>
    <string name="backup">Back up</string>
    <string name="compressing">Compressing</string>
    <string name="backup_to">Back up to</string>
    <string name="restore_trip">Restore trip</string>
    <string name="select_the_file_to_restore">Select the file to restore(.zip)</string>
    <string name="backed_up_file">Backed up file</string>
    <string name="ask_for_replace_trip">There is a same trip.Do you want to replace it?</string>
    <string name="backup_path">Back up path</string>
    <string name="error_please_use_another_path">Error!Please use another path.</string>
    <string name="there_is_a_same_poi">There is a same POI</string>
    <string name="play_setting">Play Setting</string>
    <string name="playing_trip_mode">Playing Trip Mode</string>
    <string name="select_all">Select all</string>
    <string name="eraser_mode">Eraser Mode</string>
    <string name="brush_mode">Brush Mode</string>
    <string name="title_activity_paint">Paint</string>
    <string name="thickness">Thickness</string>
    <string name="emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cache_has_been_cleared">Cache has been cleared</string>
    <string name="back_up_setting">Back up setting</string>
    <string name="restore_setting">Restore setting</string>
    <string name="setting_has_been_backed_up">Setting has been backed up</string>
    <string name="setting_has_been_restored">Setting has been restored</string>
    <string name="select_the_picture_by">Select the picture by</string>
    <string name="select_the_video_by">Select the video by</string>
    <string name="streetview">Street View</string>
    <string name="play">Play</string>
    <string name="record_setting">Record Setting</string>
    <string name="record_duration">Record duration</string>
    <string name="duration_between_record_each_location">Duration between record each location(in millisecond)</string>
    <string name="update_duration">Update Duration</string>
    <string name="duration_between_update_the_notification">Duration between update the notification(in millisecond)</string>
    <string name="diary">Diary</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="sound">Sound</string>
    <string name="root_path">Root Path</string>
    <string name="resume_trip">Resume Trip</string>
    <string name="import_memory">Import memory</string>
    <string name="update_trip_timezone">Update trip timezone</string>
    <string name="update_all_trips_timezone_by_the_first_location_in_the_track">Update all trips timezone according to the first location in the track</string>
    <string name="account">Account</string>
    <string name="upload">Upload</string>
    <string name="map">Map</string>
    <string name="move_to_category">Move to category</string>
</resources>