<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/trip_setting" >
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff6699cc"
            android:icon="@drawable/ic_color"
            android:key="trackcolor"
            android:title="@string/track_color" />

        <Preference
            android:icon="@drawable/ic_font"
            android:key="diaryfont"
            android:title="@string/diary_font" />

        <com.yupog2003.tripdiary.preferences.SeekBarPreference
            android:defaultValue="20"
            android:dialogMessage="@string/diary_font_size"
            android:icon="@drawable/ic_fontsize"
            android:key="diaryfontsize"
            android:max="70"
            android:summary="@string/select_diary_font_size"
            android:text=" pixels"
            android:title="@string/diary_font_size" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/record_setting" >
        <ListPreference
            android:defaultValue="1000"
            android:entries="@array/record_durations"
            android:entryValues="@array/record_durations"
            android:icon="@drawable/ic_frequency"
            android:key="record_duration"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/enter"
            android:summary="@string/duration_between_record_each_location"
            android:title="@string/record_duration" />
        <ListPreference
            android:defaultValue="1000"
            android:entries="@array/record_durations"
            android:entryValues="@array/record_durations"
            android:icon="@drawable/ic_frequency"
            android:key="update_duration"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/enter"
            android:summary="@string/duration_between_update_the_notification"
            android:title="@string/update_duration" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/play_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:icon="@drawable/ic_music"
            android:key="playmusic"
            android:summaryOff="@string/dont_play_background_music"
            android:summaryOn="@string/play_background_music"
            android:title="@string/play_music" />

        <Preference
            android:dependency="playmusic"
            android:icon="@drawable/ic_musicfile"
            android:key="musicpath"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/select_music_path"
            android:title="@string/music_path" />

        <ListPreference
            android:defaultValue="10"
            android:dialogTitle="@string/select_speed"
            android:enabled="true"
            android:entries="@array/speed"
            android:entryValues="@array/speed_play_trip_values"
            android:icon="@drawable/ic_dashboard"
            android:key="playtripspeed"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/enter"
            android:shouldDisableView="false"
            android:summary="@string/play_trip_speed_summary"
            android:title="@string/playing_trip_speed" />
        <ListPreference
            android:defaultValue="1000"
            android:dialogTitle="@string/select_speed"
            android:enabled="true"
            android:entries="@array/speed"
            android:entryValues="@array/speed_play_poi_values"
            android:icon="@drawable/ic_dashboard"
            android:key="playpoispeed"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/enter"
            android:shouldDisableView="false"
            android:summary="@string/play_poi_speed_summary"
            android:title="@string/playing_poi_speed" />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/playing_trip_mode"
            android:entries="@array/play_view_type"
            android:entryValues="@array/play_view_type_value"
            android:icon="@drawable/ic_gmap"
            android:key="playingtripmode"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/enter"
            android:title="@string/playing_trip_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/trip_category" >
        <Preference
            android:enabled="true"
            android:icon="@drawable/ic_folder"
            android:key="tripcategory"
            android:summary="@string/manage_category_summary"
            android:title="@string/manage_category" />
        <Preference
            android:enabled="true"
            android:icon="@drawable/ic_timezone"
            android:key="triptimezone"
            android:summary="@string/update_all_trips_timezone_by_the_first_location_in_the_track"
            android:title="@string/update_trip_timezone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/others" >
        <Preference
            android:defaultValue="/sdcard/TripDiary"
            android:icon="@drawable/ic_path"
            android:key="rootpath"
            android:title="@string/root_path" />
        <Preference
            android:icon="@drawable/ic_backup_category"
            android:key="backupsetting"
            android:title="@string/back_up_setting" />
        <Preference
            android:icon="@drawable/ic_restore_category"
            android:key="restoresetting"
            android:title="@string/restore_setting" />
        <Preference
            android:icon="@drawable/ic_google"
            android:key="account"
            android:title="@string/account" />
        <Preference
            android:icon="@drawable/ic_help"
            android:key="help"
            android:title="@string/help" />
        
    </PreferenceCategory>

</PreferenceScreen>