<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@+id/backup"
        android:icon="@drawable/ic_backup"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/backup"/>
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_rename"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/edit"/>
    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_folder"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/move_to_category"/>
    <item
        android:id="@+id/timezone"
        android:icon="@drawable/ic_timezone"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/update_trip_timezone"/>
    <item
        android:id="@+id/selectall"
        android:icon="@drawable/ic_check"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/upload"
        android:icon="@drawable/ic_upload"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/upload"/>

</menu>