<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/map"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_map"
        android:text="@string/map" />
    <Button
        android:id="@+id/diary"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_taketext"
        android:text="@string/diary" />

    <Button
        android:id="@+id/photo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_takepicture"
        android:text="@string/photo" />

    <Button
        android:id="@+id/video"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_takevideo"
        android:text="@string/video" />

    <Button
        android:id="@+id/audio"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_takeaudio"
        android:text="@string/sound" />

</LinearLayout>