<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/searchviewmap"
        android:title=""
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />
   
    <item android:id="@+id/clearcache"
        android:title="@string/clear_cache"
        android:orderInCategory="100"
        android:showAsAction="never"
         />
    <item android:id="@+id/sharetrackby"
        android:title="@string/share_track_by..."
        android:orderInCategory="100"
        android:showAsAction="never"
         />
    <item android:id="@+id/viewall"
        android:title="@string/explorer_all..."
        android:orderInCategory="100"
        android:showAsAction="never"
         />
    <item android:id="@+id/importmemory"
        android:title="@string/import_memory"
        android:orderInCategory="100"
        android:showAsAction="never"
         />
    <item android:id="@+id/streetview"
        android:title="@string/streetview"
        android:orderInCategory="100"
        android:showAsAction="never"
         />
    

</menu>