<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <Button
            android:id="@+id/starttrip"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_starttrip"
            android:text="@string/Start_Trip"
            android:textSize="50sp" />

        <Button
            android:id="@+id/resume_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/resume_trip" 
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>

    <Button
        android:id="@+id/viewhistory"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_view"
        android:text="@string/History"
        android:textSize="50sp" />

</LinearLayout>